# syntreesizer

./: .gitignore  Doxyfile  README.md  pyproject.toml
apps/: ProcessImages.py
examples/: example_1.py
modules/: Scene.py  geometries.py
syntreesizer/: Geometries.py  Images.py  Scene.py  __init__.py
