[tool.poetry]
name = "syntreesizer"
version = "0.0.1"
description = ""
authors = ["Florian Katerndahl <florian@katerndahl.com>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://www.github.com/Florian-Katerndahl/syntreesizer"
packages = [
    {include = "syntreesizer"}
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.1"
pandas = "^1.5.2"
#geopandas = "^0.12.2"
#fiona = "^1.8.22"
#gdal = [
#    {platform = "win32", url = "https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp310-cp310-win_amd64.whl"},
#    {platform = "linux", version = "==3.0.4"}
#]
pypng = "^0.20220715.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
